@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
  <notes>
+* [jan] Fix generating tooltip previews of encrypted notes.
 * [jan] Fix application-specific permission checks (Bug #9786).
 * [mjr] Datatree share to SQL upgrade script refactored for Horde 4.
 * [mjr] Default sorting criteria by creation date (Bug #7332).
@@ -804,6 +805,7 @@
    <date>2011-03-31</date>
    <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
    <notes>
+* [jan] Fix generating tooltip previews of encrypted notes.
 * [jan] Fix application-specific permission checks (Bug #9786).
 * [mjr] Datatree share to SQL upgrade script refactored for Horde 4.
 * [mjr] Default sorting criteria by creation date (Bug #7332).
